--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -15,27 +15,46 @@
       </ion-item>
     </div>
     <div *ngIf="eventDate && eventDate != ''">
-      <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
-        <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" padding-bottom>
-          <table width="100%">
-            <tbody>
-              <tr>
-                <td [ngStyle]="{'background-color': '#F4F4F4'}">
-                  {{ programStageSection.displayName }}
-                </td>
-              </tr>
-              <tr *ngIf="programStageSection.dataElements">
-                <td>
-                  <div text-left>
-                    <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
-                      <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObjectModel" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-                        (onChange)="updateData($event)"></event-input-container>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+      <div *ngIf="(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+        <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
+          <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
+            [programStageDataElements]="programStage.programStageDataElements"></custom-data-entry-form>
+        </div>
+        <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
+          <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
+            <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" padding-bottom>
+              <table width="100%">
+                <tbody>
+                  <tr>
+                    <td [ngStyle]="{'background-color': '#F4F4F4'}">
+                      {{ programStageSection.displayName }}
+                    </td>
+                  </tr>
+                  <tr *ngIf="programStageSection.dataElements">
+                    <td>
+                      <div text-left>
+                        <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
+                          <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+                            (onChange)="updateData($event)"></event-input-container>
+                        </div>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
+            <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
+              <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
+                <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
+                  <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject"
+                    [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
+                    (onChange)="updateData($event)"></event-input-container>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <ion-row no-padding>
           <ion-col>
@@ -54,34 +73,6 @@
             </div>
           </ion-col>
         </ion-row>
-      </div>
-      <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
-        <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-          <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
-            <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-              <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObjectModel"
-                [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
-                (onChange)="updateData($event)"></event-input-container>
-            </div>
-          </div>
-          <ion-row no-padding>
-            <ion-col>
-              <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
-                <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
-              </div>
-            </ion-col>
-            <ion-col col-auto>
-              <div *ngIf="canEventBeDeleted()" float-right>
-                <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
-                  <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
-                </div>
-                <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
-                  <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
-                </div>
-              </div>
-            </ion-col>
-          </ion-row>
-        </div>
       </div>
       <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
         <notification [message]="translationMapper['There are no data elements, please contact you help desk']"></notification>
