--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -9,16 +9,14 @@
       <span class="required">*</span>
     </div>
     <div class="input-field-container">
-      <ion-item>
-        <ion-datetime doneText="Update" (ionChange)="updateEventDate()" placeholder="{{translationMapper['Touch to pick date']}}"
-          displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="eventDate"></ion-datetime>
-      </ion-item>
+      <data-time-input [(inputValue)]="eventDate" (dateTimeUpdateAction)="updateEventDate($event)" [mode]="'date'"></data-time-input>
     </div>
     <div *ngIf="eventDate && eventDate != ''">
       <div *ngIf="(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
         <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
-          <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject" [dataUpdateStatus]="dataUpdateStatus"
-            [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id" (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
+          <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
+            [dataUpdateStatus]="dataUpdateStatus" [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
+            (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
         </div>
         <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
           <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
