--- a/src/components/data-time-input/data-time-input.html
+++ b/src/components/data-time-input/data-time-input.html
@@ -11,9 +11,8 @@
   </ion-col>
   <ion-col col-auto>
     <div float-right>
-      <button color="danger" margin-top padding-top padding-bottom [disabled]="dataModal[fieldId] == ''" outline small ion-button
-        (tap)="clearInput()">
-        <ion-icon name="trash" color="danger"></ion-icon>
+      <button color="danger" margin-top outline small ion-button (tap)="clearInput()">
+        <ion-icon padding-top padding-bottom name="trash" color="danger"></ion-icon>
       </button>
     </div>
   </ion-col>
