Adding alert on clearing event date

--- a/src/components/data-time-input/data-time-input.html
+++ b/src/components/data-time-input/data-time-input.html
@@ -1,10 +1,10 @@
 <ion-row>
   <ion-col>
     <div (tap)="showTime()" class="item-card" padding>
-      <span *ngIf="displayValue && displayValue !=''" padding>
-        {{ displayValue }}
+      <span *ngIf="getDisplayLable() && getDisplayLable() !== ''" padding>
+        {{ getDisplayLable() }}
       </span>
-      <span *ngIf="!(displayValue && displayValue !='')" padding>
+      <span *ngIf="!(getDisplayLable() && getDisplayLable() !== '')" padding>
         Touch to select
       </span>
     </div>
