Fxing clearing of display name on date-time component label as well as updating deletion confirmation message on delete or clear event date

--- a/src/components/data-time-input/data-time-input.html
+++ b/src/components/data-time-input/data-time-input.html
@@ -1,10 +1,10 @@
 <ion-row>
   <ion-col>
     <div (tap)="showTime()" class="item-card" padding>
-      <span *ngIf="getDisplayLable() && getDisplayLable() !== ''" padding>
-        {{ getDisplayLable() }}
+      <span *ngIf="inputValue && inputValue !=''" padding>
+        {{ inputValue }}
       </span>
-      <span *ngIf="!(getDisplayLable() && getDisplayLable() !== '')" padding>
+      <span *ngIf="!(inputValue && inputValue !='')" padding>
         Touch to select
       </span>
     </div>
@@ -16,5 +16,4 @@
       </button>
     </div>
   </ion-col>
-
 </ion-row>
