--- a/src/components/organisation-unit-input/organisation-unit-input.html
+++ b/src/components/organisation-unit-input/organisation-unit-input.html
@@ -1,5 +1,5 @@
 <ion-row>
-  <ion-col col-8>
+  <ion-col>
     <div class="item-card" padding color="font-color" text-justify (click)="openOrganisationUnitSelection()">
       {{ seletectOrganisatioUnit.name }}
     </div>
