Fixing layout of button for radio button, coordinate, unit interval and percentage

--- a/src/components/coordinate-input/coordinate-input.html
+++ b/src/components/coordinate-input/coordinate-input.html
@@ -1,10 +1,10 @@
 <ion-row>
-  <ion-col col-4>
+  <ion-col>
     <div class="full-width" padding color="font-color" text-justify (click)="openMap()">
       {{ position.lat }}
     </div>
   </ion-col>
-  <ion-col col-4>
+  <ion-col>
     <div class="full-width" padding color="font-color" text-justify (click)="openMap()">
       {{ position.lng}}
     </div>
