--- a/src/components/percentage-input/percentage-input.html
+++ b/src/components/percentage-input/percentage-input.html
@@ -1,5 +1,5 @@
 <ion-row no-padding>
-  <ion-col col-7 no-padding>
+  <ion-col no-padding>
     <ion-range [(ngModel)]="rangeValue" color="primary" (ionChange)="updateValue()" pin="true"></ion-range>
   </ion-col>
   <ion-col col-auto>
