--- a/src/components/unit-interval-input/unit-interval-input.html
+++ b/src/components/unit-interval-input/unit-interval-input.html
@@ -1,5 +1,5 @@
 <ion-row no-padding>
-  <ion-col col-7 no-padding>
+  <ion-col no-padding>
     <ion-range [(ngModel)]="rangeValue" min="0" max="{{ maxCount }} " color="primary" (ionChange)="updateValue()"></ion-range>
   </ion-col>
   <ion-col col-auto align-items-end>
