--- a/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -19,7 +19,8 @@
           <td colspan="100%">
             <div text-left>
               <tracker-event-container [formLayout]="formLayout" [programStage]="programStage" [currentUser]="currentUser" [(currentOpenEvent)]="currentEvents[currentIndex]"
-                [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [isOpenRow]="'true'" (onChange)="updateData($event)"></tracker-event-container>
+                [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [isOpenRow]="true" [canEventBeDeleted]="couldEventBeDeleted()"
+                (onChange)="updateData($event)" (onDeleteEvent)="deleteEventAction($event)"></tracker-event-container>
               <div>
                 <div no-padding>
                   <div style="display: inline-block;width: 49.3%">
@@ -50,7 +51,8 @@
   <div *ngIf="isNewEventFormOpened">
     <div class="item-card-with-no-margin" [ngStyle]="{'border-top':currentEvents.length > 0? '0px':''}">
       <tracker-event-container [formLayout]="formLayout" [programStage]="programStage" [currentUser]="currentUser" [(currentOpenEvent)]="currentOpenEvent"
-        [isOpenRow]="'false'" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></tracker-event-container>
+        [isOpenRow]="false" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [canEventBeDeleted]="couldEventBeDeleted()"
+        (onChange)="updateData($event)" (onDeleteEvent)="deleteEventAction($event)"></tracker-event-container>
 
       <div no-padding>
         <div style="display: inline-block;width: 49.3%">
