--- a/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
+++ b/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
@@ -4,20 +4,16 @@
     <span *ngIf="hasEventDatesLabel(programStage.executionDateLabel)">{{ programStage.executionDateLabel }}</span>
     <span class="required">*</span>
     <div class="input-field-container">
-      <ion-item>
-        <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['eventDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD"
-          pickerFormat="YYYY MM DD"></ion-datetime>
-      </ion-item>
+      <data-time-input [(inputValue)]="currentOpenEvent['eventDate']" (dateTimeUpdateAction)="updateEventDate($event,'eventDate')"
+        [mode]="'date'"></data-time-input>
     </div>
   </div>
-  <div style="display: inline-block;width: 49.3%">
+  <div style="display: inline-block;width: 49.3%" *ngIf="!programStage.hideDueDate">
     <span *ngIf="!hasEventDatesLabel(programStage.dueDateLabel)"> {{ translationMapper['Due date'] }}</span>
     <span *ngIf="hasEventDatesLabel(programStage.dueDateLabel)">{{ programStage.dueDateLabel }}</span>
     <div class="input-field-container">
-      <ion-item>
-        <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['dueDate']" placeholder="{{ translationMapper['Touch to pick date'] }}"
-          displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
-      </ion-item>
+      <data-time-input [withoutHorizontalPadding]="true" [(inputValue)]="currentOpenEvent['dueDate']" (dateTimeUpdateAction)="updateEventDate($event,'dueDate')"
+        [mode]="'date'"></data-time-input>
     </div>
   </div>
 </div>
