--- a/src/pages/coordinate-modal/components/coordinate/coordinate.html
+++ b/src/pages/coordinate-modal/components/coordinate/coordinate.html
@@ -1,4 +1,7 @@
 <ion-content>
+  <div *ngIf="isLocationBasedOnPhone" class="my-location animated fadeIn">
+    My location is {{ position|json }}, Accurate to {{ accuracy }} meter(s)
+  </div>
   <div id="coordinate-selection" style="width:100%; height:100%;">
   </div>
 </ion-content>
@@ -15,6 +18,9 @@
       </ion-col>
       <ion-col col-auto>
         <div float-right>
+          <div ion-button clear text-justify *ngIf="isLoadingMyLocation" class="animated fadeIn">
+            <loading loadingSize="small"></loading>
+          </div>
           <div class="item-card" color="font-color" (tap)="getMylocation()" ion-button clear text-justify>
             <ion-icon name="locate" color="icon-color"></ion-icon>&nbsp;
             <span [translate]="'My location'"></span>
