--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -1,5 +1,5 @@
 <div *ngIf="dataElement && dataElement.categoryCombo && dataElement.categoryCombo.categoryOptionCombos">
-  <div *ngIf="formLayout == 'tableLayout' || formLayout == 'customLayout'" padding-bottom>
+  <div *ngIf="formLayout === 'tableLayout' || formLayout === 'customLayout'" padding-bottom>
     <table class="table table-bordered" width="100%">
       <thead>
         <tr>
@@ -33,48 +33,47 @@
                 <numerical-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data" [valueType]="dataElement.valueType"></numerical-input-field>
               </div>
-
-              <div *ngIf="dataElement.valueType == 'DATE'">
-                <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
+              <div *ngIf="dataElement.valueType === 'DATE' || dataElement.valueType === 'DATETIME' || dataElement.valueType === 'TIME' ">
+                <date-input-field (onChange)="updateValue($event)" [valueType]="dataElement.valueType" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></date-input-field>
               </div>
-              <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+              <div *ngIf="dataElement.valueType === 'TRUE_ONLY'">
                 <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></true-only-input-field>
               </div>
-              <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+              <div *ngIf="dataElement.valueType === 'BOOLEAN'">
                 <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></boolean-input-field>
               </div>
-              <div *ngIf="dataElement.valueType == 'COORDINATE'">
+              <div *ngIf="dataElement.valueType === 'COORDINATE'">
                 <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></coordinate-input>
               </div>
-              <div *ngIf="dataElement.valueType == 'ORGANISATION_UNIT'">
+              <div *ngIf="dataElement.valueType === 'ORGANISATION_UNIT'">
                 <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></organisation-unit-input>
               </div>
-              <div *ngIf="dataElement.valueType == 'UNIT_INTERVAL'">
+              <div *ngIf="dataElement.valueType === 'UNIT_INTERVAL'">
                 <unit-interval-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data">
                 </unit-interval-input>
               </div>
-              <div *ngIf="dataElement.valueType == 'PERCENTAGE'">
+              <div *ngIf="dataElement.valueType === 'PERCENTAGE'">
                 <percentage-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                   [data]="data"></percentage-input>
               </div>
-              <div *ngIf="dataElement.valueType == 'EMAIL'">
+              <div *ngIf="dataElement.valueType === 'EMAIL'">
                 <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
                   [categoryOptionComboId]="categoryOptionCombo.id" [data]="data">
                 </email-input>
               </div>
-              <div *ngIf="dataElement.valueType == 'PHONE_NUMBER'">
+              <div *ngIf="dataElement.valueType === 'PHONE_NUMBER'">
                 <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
                   [categoryOptionComboId]="categoryOptionCombo.id" [data]="data">
                 </phone-number-input>
               </div>
 
-              <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
+              <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) === -1">
                 <div padding>
                   Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
                 </div>
@@ -87,7 +86,7 @@
     </table>
 
   </div>
-  <div *ngIf="formLayout == 'listLayout'">
+  <div *ngIf="formLayout === 'listLayout'">
     <div *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos">
       <div (click)="showTooltips(dataElement,categoryOptionCombo.name)" class="inputLabel">
         {{ getListLayoutLabel(dataElement.categoryCombo.name,categoryOptionCombo.name)}}
@@ -110,47 +109,47 @@
             [data]="data" [valueType]="dataElement.valueType"></numerical-input-field>
         </div>
 
-        <div *ngIf="dataElement.valueType == 'DATE'">
+        <div *ngIf="dataElement.valueType === 'DATE'">
           <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></date-input-field>
         </div>
-        <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+        <div *ngIf="dataElement.valueType === 'TRUE_ONLY'">
           <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></true-only-input-field>
         </div>
-        <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+        <div *ngIf="dataElement.valueType === 'BOOLEAN'">
           <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></boolean-input-field>
         </div>
-        <div *ngIf="dataElement.valueType == 'COORDINATE'">
+        <div *ngIf="dataElement.valueType === 'COORDINATE'">
           <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></coordinate-input>
         </div>
-        <div *ngIf="dataElement.valueType == 'ORGANISATION_UNIT'">
+        <div *ngIf="dataElement.valueType === 'ORGANISATION_UNIT'">
           <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></organisation-unit-input>
         </div>
-        <div *ngIf="dataElement.valueType == 'UNIT_INTERVAL'">
+        <div *ngIf="dataElement.valueType === 'UNIT_INTERVAL'">
           <unit-interval-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data">
           </unit-interval-input>
         </div>
-        <div *ngIf="dataElement.valueType == 'PERCENTAGE'">
+        <div *ngIf="dataElement.valueType === 'PERCENTAGE'">
           <percentage-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
             [data]="data"></percentage-input>
         </div>
-        <div *ngIf="dataElement.valueType == 'EMAIL'">
+        <div *ngIf="dataElement.valueType === 'EMAIL'">
           <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
             [categoryOptionComboId]="categoryOptionCombo.id" [data]="data">
           </email-input>
         </div>
-        <div *ngIf="dataElement.valueType == 'PHONE_NUMBER'">
+        <div *ngIf="dataElement.valueType === 'PHONE_NUMBER'">
           <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
             [categoryOptionComboId]="categoryOptionCombo.id" [data]="data">
           </phone-number-input>
         </div>
 
-        <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
+        <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) === -1">
           <div padding>
             Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
           </div>
