--- a/src/pages/event-capture/components/event-input-container/event-input-container.html
+++ b/src/pages/event-capture/components/event-input-container/event-input-container.html
@@ -22,54 +22,53 @@
         [data]="data" [valueType]="dataElement.valueType">
       </numerical-input-field>
     </div>
-
-    <div *ngIf="dataElement.valueType == 'DATE'">
-      <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
+    <div *ngIf="dataElement.valueType === 'DATE' || dataElement.valueType === 'DATETIME' || dataElement.valueType === 'TIME' ">
+      <date-input-field (onChange)="updateValue($event)" [valueType]="dataElement.valueType" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </date-input-field>
     </div>
-    <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+    <div *ngIf="dataElement.valueType === 'TRUE_ONLY'">
       <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </true-only-input-field>
     </div>
-    <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+    <div *ngIf="dataElement.valueType === 'BOOLEAN'">
       <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </boolean-input-field>
     </div>
-    <div *ngIf="dataElement.valueType == 'COORDINATE'">
+    <div *ngIf="dataElement.valueType === 'COORDINATE'">
       <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </coordinate-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'ORGANISATION_UNIT'">
+    <div *ngIf="dataElement.valueType === 'ORGANISATION_UNIT'">
       <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </organisation-unit-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'UNIT_INTERVAL'">
+    <div *ngIf="dataElement.valueType === 'UNIT_INTERVAL'">
       <unit-interval-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </unit-interval-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'PERCENTAGE'">
+    <div *ngIf="dataElement.valueType === 'PERCENTAGE'">
       <percentage-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
       </percentage-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'EMAIL'">
+    <div *ngIf="dataElement.valueType === 'EMAIL'">
       <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
         [categoryOptionComboId]="'dataElement'" [data]="data">
       </email-input>
     </div>
-    <div *ngIf="dataElement.valueType == 'PHONE_NUMBER'">
+    <div *ngIf="dataElement.valueType === 'PHONE_NUMBER'">
       <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [dataElementId]="dataElement.id"
         [categoryOptionComboId]="'dataElement'" [data]="data">
       </phone-number-input>
     </div>
 
-    <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
+    <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) === -1">
       <div padding>
         Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
       </div>
