--- a/src/pages/tracker-capture/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/pages/tracker-capture/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -22,54 +22,52 @@
         [data]="data" [valueType]="trackedEntityAttribute.valueType">
       </numerical-input-field>
     </div>
-
-    <div *ngIf="trackedEntityAttribute.valueType == 'DATE'">
-      <date-input-field (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
-        [data]="data">
-      </date-input-field>
+    <div *ngIf="trackedEntityAttribute.valueType === 'DATE' || trackedEntityAttribute.valueType === 'DATETIME' || trackedEntityAttribute.valueType === 'TIME' ">
+      <date-input-field (onChange)="updateValue($event)" [valueType]="trackedEntityAttribute.valueType" [dataElementId]="trackedEntityAttribute.id"
+        [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data"></date-input-field>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'TRUE_ONLY'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'TRUE_ONLY'">
       <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </true-only-input-field>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'BOOLEAN'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'BOOLEAN'">
       <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </boolean-input-field>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'COORDINATE'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'COORDINATE'">
       <coordinate-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </coordinate-input>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'ORGANISATION_UNIT'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'ORGANISATION_UNIT'">
       <organisation-unit-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </organisation-unit-input>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'UNIT_INTERVAL'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'UNIT_INTERVAL'">
       <unit-interval-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </unit-interval-input>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'PERCENTAGE'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'PERCENTAGE'">
       <percentage-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
       </percentage-input>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'EMAIL'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'EMAIL'">
       <email-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
         [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
       </email-input>
     </div>
-    <div *ngIf="trackedEntityAttribute.valueType == 'PHONE_NUMBER'">
+    <div *ngIf="trackedEntityAttribute.valueType === 'PHONE_NUMBER'">
       <phone-number-input (onChange)="updateValue($event)" [(dataValuesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
         [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'" [data]="data">
       </phone-number-input>
     </div>
 
-    <div *ngIf="supportValueTypes.indexOf(trackedEntityAttribute.valueType) == -1">
+    <div *ngIf="supportValueTypes.indexOf(trackedEntityAttribute.valueType) === -1">
       <div padding>
         Currently '{{ trackedEntityAttribute.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
       </div>
