Fixing style for date time and radio button selection, rebder option less than 6 as radio on default settings as well as adding support of date time and time inputs

--- a/src/components/data-time-input/data-time-input.scss
+++ b/src/components/data-time-input/data-time-input.scss
@@ -6,6 +6,7 @@ data-time-input {
     padding-bottom: 10px;
     padding-left: 5px;
     margin-left: 5px;
+    margin-bottom: 5px;
     margin-top: 10px;
   }
   .item-card-without-horizontal-padding {
@@ -16,5 +17,6 @@ data-time-input {
     padding-left: 5px;
     margin-left: 5px;
     margin-top: 10px;
+    margin-bottom: 5px;
   }
 }
