--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,9 +20,7 @@ ion-modal.inset-modal {
 
 .required {
   color: #f53d3d;
-}
-
-//app icons & titles
+} //app icons & titles
 .menu-app-icon-list {
   width: 55%;
   text-align: center;
@@ -35,9 +33,7 @@ ion-modal.inset-modal {
   white-space: nowrap;
   overflow: hidden !important;
   text-overflow: ellipsis;
-}
-
-//cards
+} //cards
 .card-md h1 {
   font-size: 1.8rem;
   color: #7a7a7a;
@@ -60,16 +56,12 @@ ion-modal.inset-modal {
 .card-md h6 {
   font-size: 1.7rem;
   color: #7a7a7a;
-}
-
-//font label
+} //font label
 .inputLabel {
   padding-bottom: 4px;
   padding-top: 5px;
   margin-bottom: 6px;
-}
-
-//action sheet style for tool tips
+} //action sheet style for tool tips
 .action-sheet-md .action-sheet-title {
   padding: 5px 16px 5px;
   font-size: 1.8rem;
@@ -82,14 +74,10 @@ ion-modal.inset-modal {
   font-size: 1.8rem;
   text-align: left;
   color: #757575;
-}
-
-//input fields
+} //input fields
 .text-input-wp {
   border: 0px solid rgba(0, 0, 0, 0.5);
-}
-
-//items
+} //items
 .item-md p {
   font-size: 1.7rem !important;
 }
@@ -97,18 +85,14 @@ ion-modal.inset-modal {
 .item-md h2 {
   font-size: 1.8rem !important;
   font-weight: 300;
-}
-
-//tabs button
+} //tabs button
 .tabs-md .tab-button {
   font-size: 1.7rem !important;
 }
 
 .tabs-md .tab-button[aria-selected='true'] {
   font-size: 1.7rem !important;
-}
-
-//buttons
+} //buttons
 .button-md {
   font-weight: normal;
 }
@@ -124,9 +108,7 @@ ion-modal.inset-modal {
 
 .button-fab {
   z-index: 100;
-}
-
-//selections
+} //selections
 .selectionLabel {
   font-size: 1.7rem !important;
 }
@@ -347,9 +329,7 @@ ion-modal.inset-modal {
 
 .icon-color {
   color: #97cbfd;
-}
-
-//fields color
+} //fields color
 .grey-field {
   background-color: #f4f4f4;
 }
