--- a/src/components/radio-button-input/radio-button-input.html
+++ b/src/components/radio-button-input/radio-button-input.html
@@ -1,9 +1,11 @@
 <ion-row>
   <ion-col padding-top padding-bottom>
-    <label class="radio inline" *ngFor="let option of options">
-      <input type="radio" value="{{ option.code }}" name="{{ fieldId }}" (change)="saveValue()" [(ngModel)]="dataModal[fieldId]">
-      <span> {{ option.name }} </span>
-    </label>
+    <div float-left>
+      <label class="radio inline" *ngFor="let option of options">
+        <input type="radio" value="{{ option.code }}" name="{{ fieldId }}" (change)="saveValue()" [(ngModel)]="dataModal[fieldId]">
+        <span> {{ option.name }} </span>
+      </label>
+    </div>
   </ion-col>
   <ion-col col-auto>
     <div float-right>
