--- a/src/components/text-input-field/text-input-field.html
+++ b/src/components/text-input-field/text-input-field.html
@@ -1,6 +1,6 @@
-<div *ngIf="valueType == 'LONG_TEXT'" >
+<div *ngIf="valueType == 'LONG_TEXT'">
   <ion-item>
-    <ion-textarea (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue" ></ion-textarea>
+    <ion-textarea (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-textarea>
   </ion-item>
 </div>
 <div *ngIf="valueType == 'TEXT'">
@@ -8,3 +8,16 @@
     <ion-input type="text" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
   </ion-item>
 </div>
+
+<!-- <ion-row>
+    <ion-col>
+      <div float-left>
+        
+      </div>
+    </ion-col>
+    <ion-col col-auto>
+      <div float-right>
+        
+      </div>
+    </ion-col>
+  </ion-row> -->
