--- a/src/pages/data-entry/components/aggregate-conflict-handler/aggregate-conflict-handler.html
+++ b/src/pages/data-entry/components/aggregate-conflict-handler/aggregate-conflict-handler.html
@@ -8,9 +8,9 @@
     </ion-item>
   </div>
   <div *ngIf="!isLoading">
-    <div>orgUnitId : {{orgUnitId|json}}</div>
-    <div>dataSetId : {{dataSetId|json}}</div>
-    <div>period : {{period|json}}</div>
-    <div>dataDimension : {{dataDimension|json}}</div>
+    <div>updates : {{ summaryObject.updates.length}}</div>
+    <div>conflicts : {{ summaryObject.conflicts.length}}</div>
+
+    <div> {{ summaryObject|json }}</div>
   </div>
 </div>
