Adding support of age value type input field

--- a/src/pages/event-capture/components/event-input-container/event-input-container.html
+++ b/src/pages/event-capture/components/event-input-container/event-input-container.html
@@ -32,6 +32,10 @@
         [data]="data">
       </true-only-input-field>
     </div>
+    <div *ngIf="dataElement.valueType === 'AGE'">
+      <age-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'" [data]="data">
+      </age-input>
+    </div>
     <div *ngIf="dataElement.valueType === 'BOOLEAN'">
       <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="'dataElement'"
         [data]="data">
