--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -46,6 +46,10 @@
                   <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                     [data]="data"></boolean-input-field>
                 </div>
+                <div *ngIf="dataElement.valueType === 'AGE'">
+                  <age-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
+                    [data]="data"></age-input>
+                </div>
                 <div *ngIf="dataElement.valueType === 'COORDINATE'">
                   <coordinate-input (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
                     [data]="data"></coordinate-input>
