--- a/src/pages/tracker-capture/components/tracked-entity-inputs/tracked-entity-inputs.html
+++ b/src/pages/tracker-capture/components/tracked-entity-inputs/tracked-entity-inputs.html
@@ -31,6 +31,11 @@
         [data]="data">
       </true-only-input-field>
     </div>
+    <div *ngIf="trackedEntityAttribute.valueType === 'AGE'">
+      <age-input (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
+        [data]="data">
+      </age-input>
+    </div>
     <div *ngIf="trackedEntityAttribute.valueType === 'BOOLEAN'">
       <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="trackedEntityAttribute.id" [categoryOptionComboId]="'trackedEntityAttribute'"
         [data]="data">
