Adding percentage on sync data via internet

--- a/src/pages/sync/components/upload-data-via-internet/upload-via-internet.html
+++ b/src/pages/sync/components/upload-data-via-internet/upload-via-internet.html
@@ -1,5 +1,6 @@
 <div *ngIf="isLoading">
   <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
+  <div text-center padding-top> {{ progress }} %</div>
 </div>
 <div *ngIf="!isLoading">
   <ion-row>
