Centralize single component for handling rendering of evemts for tracker and events program stages

--- a/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
+++ b/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
@@ -30,40 +30,9 @@
         (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
     </div>
     <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-      <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
-        <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" padding-bottom>
-          <table width="100%">
-            <tbody>
-              <tr>
-                <td [ngStyle]="{'background-color': '#F4F4F4'}">
-                  {{ programStageSection.displayName }}
-                </td>
-              </tr>
-              <tr *ngIf="programStageSection.dataElements">
-                <td>
-                  <div text-left>
-                    <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
-                      <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [data]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-                        [mandatory]="'false'" (onChange)="updateData($event)"></event-input-container>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
-        <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-          <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
-            <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-              <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [data]="dataObject"
-                [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
-                (onChange)="updateData($event)"></event-input-container>
-            </div>
-          </div>
-        </div>
-      </div>
+      <default-event-entry-form [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+        (onChange)="updateData($event)"></default-event-entry-form>
+
     </div>
   </div>
   <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
