--- a/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
+++ b/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
@@ -1,13 +1,13 @@
 <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
-  <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" padding-bottom>
-    <table width="100%">
+  <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" class="section-container">
+    <table width="100%" *ngIf="programStageSection">
       <tbody>
-        <tr>
+        <tr (click)="toggleSection(programStageSection.id)">
           <td [ngStyle]="{'background-color': '#F4F4F4'}">
             {{ programStageSection.displayName }}
           </td>
         </tr>
-        <tr *ngIf="programStageSection.dataElements">
+        <tr *ngIf="programStageSection.dataElements && isSectionOpen[programStageSection.id]">
           <td>
             <div text-left>
               <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
