--- a/src/pages/settings/components/barcode-settings/barcode-settings.html
+++ b/src/pages/settings/components/barcode-settings/barcode-settings.html
@@ -1,11 +1,11 @@
 <ion-item no-lines>
-  <ion-label>
+  <ion-label text-wrap>
     <span [translate]="'Show barcode reader on numerical fields'"></span>
   </ion-label>
   <ion-toggle (ionChange)="applySettings()" color="primary" [(ngModel)]="settingObject.barcode.allowBarcodeReaderOnNumerical"></ion-toggle>
 </ion-item>
 <ion-item no-lines>
-  <ion-label>
+  <ion-label text-wrap>
     <span [translate]="'Show barcode reader on text fields'"></span>
   </ion-label>
   <ion-toggle (ionChange)="applySettings()" color="primary" [(ngModel)]="settingObject.barcode.allowBarcodeReaderOnText"></ion-toggle>
