--- a/src/pages/settings/components/synchronization-settings/synchronization-settings.html
+++ b/src/pages/settings/components/synchronization-settings/synchronization-settings.html
@@ -20,7 +20,7 @@
 <ion-row>
   <ion-col>
     <ion-item no-lines>
-      <ion-label>
+      <ion-label text-wrap>
         <span [translate]="'Auto synchronization'"></span>
       </ion-label>
       <ion-toggle (ionChange)="updateAutoSyncSetting()" color="primary" [(ngModel)]="settingObject.synchronization.isAutoSync"></ion-toggle>
