Adding multiline scan beviour activation, multiline separator as well as key value pair seperator on barcode settings

--- a/src/pages/settings/components/app-settings/app-settings.html
+++ b/src/pages/settings/components/app-settings/app-settings.html
@@ -1,6 +1,6 @@
 <ion-row>
   <ion-col>
-    <ion-item>
+    <ion-item no-lines>
       <ion-label text-wrap>
         <span [translate]="'Current language'"></span>
       </ion-label>
