Applying barcode settings on deduce scanned barcode value

--- a/src/components/text-input-field/text-input-field.html
+++ b/src/components/text-input-field/text-input-field.html
@@ -15,7 +15,7 @@
   </ion-col>
   <ion-col col-auto *ngIf="showBarcodeScanner">
     <div float-right>
-      <barcode-input (barcodeReaderChange)="onChangeBarcodeReader($event)"></barcode-input>
+      <barcode-input [barcodeSettings]="barcodeSettings" (barcodeReaderChange)="onChangeBarcodeReader($event)"></barcode-input>
     </div>
   </ion-col>
 </ion-row>
