Adding support of coordinates selection for events on event capture as well as events for tracker

--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -15,8 +15,11 @@
     <div *ngIf="!(eventDate && eventDate != '')">
       <event-date-notification [notification]="getEventDateNotification()"></event-date-notification>
     </div>
-
     <div *ngIf="eventDate && eventDate != ''">
+      <div *ngIf="programStage.captureCoordinates" class="item-card">
+        {{ translationMapper['Coordinate']}}
+        <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)" [(coordinate)]="currentEvent.coordinate"></event-coordinate-selector>
+      </div>
       <div *ngIf="(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
         <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
           <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
