--- a/src/components/phone-number-input/phone-number-input.html
+++ b/src/components/phone-number-input/phone-number-input.html
@@ -1,7 +1,7 @@
 <div>
   <ion-row>
     <ion-col>
-      <ion-item>
+      <ion-item no-lines>
         <ion-input (ionBlur)="updateValue()" [(ngModel)]="inputFieldValue" type="tel"></ion-input>
       </ion-item>
     </ion-col>
