--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -1,6 +1,6 @@
 <div *ngIf="!(dataEntrySettings && dataEntrySettings.shouldDisplayAsRadio && (options && options.length <= maxOptionCountAsRadion))">
   <div (click)="openOptionListModal()" padding-left>
-    <ion-item>
+    <ion-item no-lines>
       <span *ngIf="!(inputFieldValue && labelMapper && labelMapper[inputFieldValue]) || inputFieldValue ===''">Touch to select option</span>
       <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])"> {{ labelMapper[inputFieldValue] }}</span>
     </ion-item>
