--- a/src/components/text-input-field/text-input-field.html
+++ b/src/components/text-input-field/text-input-field.html
@@ -2,12 +2,12 @@
   <ion-col>
     <div float-left>
       <div *ngIf="valueType == 'LONG_TEXT'">
-        <ion-item>
+        <ion-item no-lines>
           <ion-textarea (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-textarea>
         </ion-item>
       </div>
       <div *ngIf="valueType == 'TEXT'">
-        <ion-item>
+        <ion-item no-lines>
           <ion-input type="text" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
         </ion-item>
       </div>
